--- a/site/frontend/Energymix/style.css
+++ b/site/frontend/Energymix/style.css
@@ -1,5 +1,5 @@
 html{
-    background-color: red;
+    background-color: #10181d;
     overflow-x: hidden;
 }
 header{
@@ -9,12 +9,92 @@ header{
 .container-data{
     position: relative;
     background-color: #10181d;
-    height: 100vh;
+    color: wheat;
+    height: auto;
     width: 100vw;
     padding: 1vw;
     display: flex;
     justify-content: space-evenly;
     flex-direction: row;
+}
+
+.container-data > h1:first-child{
+    padding: 30px;
+    font-size: 2em;
+}
+/*PRODUCTION*/
+#container-production{
+    margin: 1%;
+    position: relative;
+    background-color: black;
+    color: wheat;
+    padding: 2%;
+    width: 80%;
+    height: auto;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+}
+
+.prod{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.prod > img {
+    width: 50px;
+    height: 50px;
+}
+
+.prod-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+}
+
+.prod-nom{
+    font-size: 1.5em;
+}
+
+.prod-prod{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 1em;
+}
+
+/*POURCENTAGE*/
+#container-pourcentage{
+    margin: 1%;
+    position: relative;
+    background-color: black;
+    color: wheat;
+    padding: 2%;
+    width: 20%;
+    height: auto;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
+
+.pourcen{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.pourcen-nom{
+    font-size: 1.5em;
+}
+
+.pourcen-pourcen{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 1.5em;
 }
 
 
