--- a/site/frontend/LaissezMoi/style.css
+++ b/site/frontend/LaissezMoi/style.css
@@ -57,8 +57,85 @@ header nav a:hover{
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
 }
-.
+.info{
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.info .titre{
+    font-family: cursive;
+    font-size: 7em;
+    background: linear-gradient(to right,#3effe4, #f5f6);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    width: 900px;
+    height: 215px;
+    margin-bottom: 30px;
+}
+.info .parahraphe{
+    color: aqua;
+    font-size: 1.2em;
+    width: 50%;
+    margin-bottom: 40px;
+}
+.info .btn{
+    font-size: 1.3em;
+    font-weight: 500;
+    text-decoration: none;
+    background: linear-gradient(to bottom, #3effe4, #f5f6);
+    color: #fff;
+    padding: 10px 35px;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+.info .btn:hover{
+    transform: scale(1.05);
+    color: #fff;
+}
+.accueil  img:first-child{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    pointer-events: none;
+}
+.accueil img{
+    position: absolute;
+    top: 30%;
+    left: 0;
+    width: 60%;
+    height: 60%;
+    object-fit: cover;
+    pointer-events: none;
+}
+.img_hydro{
+    z-index: 9;
+    transform: translate(-600px);
+    transition: 0.8s;
+}
+.img_nuclear{
+    z-index: 9;
+    transform: translate(+600px);
+    transition: 0.8s;
+
+}
+.logo, nav{
+    transform: translateY(-70px);
+    transition: 0.8s;
+}
+.content{
+    z-index: 10;
+    position: relative;
+    padding: 90px 100px;
+    background-color: #567d00;
+}
+
 
 
