--- a/site/frontend/LaissezMoi/style.css
+++ b/site/frontend/LaissezMoi/style.css
@@ -23,7 +23,7 @@ header .logo{
     text-transform: uppercase;
     font-weight: 800;
     text-decoration: none;
-    background: linear-gradient(to right,#3effe4, #f5f6);
+    background: linear-gradient(to right,#f0b190, #f99c2a);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -34,7 +34,7 @@ header nav{
 }
 
 header nav a{
-    color: #3effe4;
+    color: #f99c2a;
     font-size: 1.1em;
     font-weight: 500;
     text-decoration: none;
@@ -46,7 +46,7 @@ header nav a{
 }
 
 header nav a:hover{
-    background: linear-gradient(to bottom, #3effe4, #f5f6);
+    background: linear-gradient(to bottom, #f0b190, #f99c2a);
     color: #fff;
 }
 .accueil{
@@ -65,29 +65,33 @@ header nav a:hover{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    text-align: center;
 }
 
 .info .titre{
     font-family: cursive;
     font-size: 7em;
-    background: linear-gradient(to right,#3effe4, #f5f6);
+    background: linear-gradient(to right,#f0b190, #f99c2a);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     width: 900px;
     height: 215px;
     margin-bottom: 30px;
 }
-.info .parahraphe{
-    color: aqua;
+.info .paragraphe{
+    color: #000;
     font-size: 1.2em;
     width: 50%;
     margin-bottom: 40px;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
+    padding: 10px;
 }
 .info .btn{
     font-size: 1.3em;
     font-weight: 500;
     text-decoration: none;
-    background: linear-gradient(to bottom, #3effe4, #f5f6);
+    background: linear-gradient(to bottom, #f0b190, #f99c2a);
     color: #fff;
     padding: 10px 35px;
     border-radius: 5px;
@@ -106,11 +110,20 @@ header nav a:hover{
     object-fit: cover;
     pointer-events: none;
 }
-.accueil img{
+.accueil .img_hydro{
     position: absolute;
-    top: 30%;
+    top: 35vh;
     left: 0;
-    width: 60%;
+    width: 50%;
+    height: 60%;
+    object-fit: cover;
+    pointer-events: none;
+}
+.accueil .img_nuclear{
+    position: absolute;
+    top: 35vh;
+    right: 0;
+    width: 50%;
     height: 60%;
     object-fit: cover;
     pointer-events: none;
@@ -134,7 +147,7 @@ header nav a:hover{
     z-index: 10;
     position: relative;
     padding: 90px 100px;
-    background-color: #567d00;
+    background-color: #547701;
 }
 
 
