--- a/site/frontend/Energymix/style.css
+++ b/site/frontend/Energymix/style.css
@@ -1,25 +1,85 @@
-html{
-    background-color: #10181d;
+/*COMUN*/
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+    scroll-behavior: smooth;
+}
+body{
+    min-height: 100vh;
     overflow-x: hidden;
 }
+header{
+    z-index: 999;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 30px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+header .logo{
+    font-size: 2em;
+    text-transform: uppercase;
+    font-weight: 800;
+    text-decoration: none;
+    background: linear-gradient(to right,#f0b190, #f99c2a);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+header nav{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+header nav a{
+    color: #f99c2a;
+    font-size: 1.1em;
+    font-weight: 500;
+    text-decoration: none;
+    margin-left: 20px;
+    padding: 5px 16px;
+    border-radius: 20px;
+    transition: 0.3s;
+    transition-property: background, color;
+}
 
-.container-data{
+header nav a:hover{
+    background: linear-gradient(to bottom, #f0b190, #f99c2a);
+    color: #fff;
+}
+
+.logo, nav{
+    transform: translateY(-70px);
+    transition: 0.8s;
+}
+
+/**/
+.contenu_page{
     position: relative;
-    background-color: #10181d;
-    color: wheat;
-    height: auto;
-    width: 100vw;
-    padding: 1vw;
+    border-radius: none;
+    width: 100%;
+    height: 100vh;
+    padding: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #6399c7;
+}
+
+.data-container{
+    width: 100%;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     flex-direction: row;
 }
 
-.container-data > h1:first-child{
-    padding: 30px;
-    font-size: 2em;
-}
 /*PRODUCTION*/
 #container-production{
     margin: 1%;
