--- a/site/frontend/Energymix/style.css
+++ b/site/frontend/Energymix/style.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
     scroll-behavior: smooth;
+    user-select: none;
 }
 body{
     min-height: 100vh;
@@ -52,7 +53,6 @@ header nav a:hover{
     background: linear-gradient(to bottom, #f0b190, #f99c2a);
     color: #fff;
 }
-
 .logo, nav{
     transform: translateY(-70px);
     transition: 0.8s;
