--- a/site/frontend/LaissezMoi/style.css
+++ b/site/frontend/LaissezMoi/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
     scroll-behavior: smooth;
+    user-select: none;
 }
 body{
     min-height: 100vh;
@@ -168,20 +169,24 @@ header nav a:hover{
     align-items: center;
     flex-direction: column;
     transition: 0.5s;
+    text-decoration: none;
 }
 .card:hover{
     cursor: pointer;
     transform: scale(1.05);
 }
+.card-body{
+    padding: 1vh;
+}
 .card-title{
     font-size: 1.5em;
 }
 .card-text{
-    font-size: 1em;
+    font-size: 0.9em;
 }
 .card > img{
-    width: 14vw;
-    height: 14vw;
+    width: 100%;
+    height: 70%;
     object-fit: cover;
     border-radius: 10px;
 }
