--- a/site/frontend/Energymix/style.css
+++ b/site/frontend/Energymix/style.css
@@ -71,23 +71,49 @@ header nav a:hover{
     flex-direction: column;
     background-color: #6399c7;
 }
-
+.contenu_page h1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 5em;
+    background: linear-gradient(to right,#f0b190, #f99c2a);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    width: 80%;
+    height: auto;
+    max-height: 20vh;
+    margin: 5vh auto 30px 0;
+}
 .data-container{
     width: 100%;
+    height: 60vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
 }
 
+
 /*PRODUCTION*/
-#container-production{
+.production{
     margin: 1%;
     position: relative;
-    background-color: black;
+    width: 80%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    background-color:#417aac;
+    border-radius: 30px;
+    padding: 10px;
+    height: 100%;
+}
+.production img{
+    width: 20vw;
+    height: 20vw;
+}
+#container-production{
     color: wheat;
     padding: 2%;
-    width: 80%;
+    width: 100%;
     height: auto;
     display: flex;
     justify-content: space-evenly;
@@ -127,11 +153,12 @@ header nav a:hover{
 #container-pourcentage{
     margin: 1%;
     position: relative;
-    background-color: black;
+    background-color: #417aac;
+    border-radius: 30px;
     color: wheat;
     padding: 2%;
     width: 20%;
-    height: auto;
+    height: 100%;
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
@@ -153,16 +180,4 @@ header nav a:hover{
     flex-direction: row;
     justify-content: center;
     font-size: 1.5em;
-}
-
-
-
-footer{
-    background-color: #15252c;
-    color: #eeee;
-    position: relative;
-    bottom: 0;
-    margin: 0;
-    width: 100vw;
-    padding: 1%
 }
