--- a/site/frontend/LaissezMoi/style.css
+++ b/site/frontend/LaissezMoi/style.css
@@ -78,7 +78,7 @@ header nav a:hover{
 
 .info .titre{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 7em;
+    font-size: 7vw;
     background: linear-gradient(to right,#f0b190, #f99c2a);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -91,6 +91,7 @@ header nav a:hover{
     color: #000;
     font-size: 1.2em;
     width: 40%;
+    min-width: 300px;
     margin-bottom: 40px;
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
@@ -124,6 +125,7 @@ header nav a:hover{
     bottom: 6vh;
     left: 0;
     width: 50%;
+    min-width: 380px;
     height: auto;
     object-fit: cover;
     pointer-events: none;
@@ -133,6 +135,7 @@ header nav a:hover{
     bottom: 6vh;
     right: 0;
     width: 50%;
+    min-width: 380px;
     height: auto;
     object-fit: cover;
     pointer-events: none;
@@ -175,17 +178,18 @@ header nav a:hover{
     position: relative;
     padding: 90px 100px;
     background-color: #547701;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: row;
-    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 20rem);
+    justify-content:space-evenly;
+    height: fit-content;
 }
 .card{
-    margin: 10px;
+    margin: 20px;
     padding: 10px;
     width: 18vw;
     height: 22vw;
+    min-width: 300px;
+    min-height: 400px;
     background: linear-gradient(to bottom, #f0f4f9, #f4f5f9);
     border-radius: 10px;
     color: black;
