--- a/site/frontend/Energymix/energymix.css
+++ b/site/frontend/Energymix/energymix.css
@@ -1,64 +1,5 @@
-/*COMUN*/
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    scroll-behavior: smooth;
-    user-select: none;
-}
-body{
-    min-height: 100vh;
-    overflow-x: hidden;
-}
-header{
-    z-index: 999;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 30px 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-header .logo{
-    font-size: 2em;
-    text-transform: uppercase;
-    font-weight: 800;
-    text-decoration: none;
-    background: linear-gradient(to right,#f0b190, #f99c2a);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-header nav{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-header nav a{
-    color: #f99c2a;
-    font-size: 1.1em;
-    font-weight: 500;
-    text-decoration: none;
-    margin-left: 20px;
-    padding: 5px 16px;
-    border-radius: 20px;
-    transition: 0.3s;
-    transition-property: background, color;
-}
-
-header nav a:hover{
-    background: linear-gradient(to bottom, #f0b190, #f99c2a);
-    color: #fff;
-}
-.logo, nav{
-    transform: translateY(-70px);
-    transition: 0.8s;
-}
-
-/**/
+/*CONTENU*/
 .contenu_page{
     position: relative;
     border-radius: none;
@@ -69,12 +10,12 @@ header nav a:hover{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #6399c7;
+    background-color: var(--clr-background-color);
 }
 .contenu_page h1{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 5em;
-    background: linear-gradient(to right,#f0b190, #f99c2a);
+    font-size: var(--fs-xl);
+    background: linear-gradient(to right,var(--clr-text-secondary), var(--clr-text-primary));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     width: 80%;
@@ -101,7 +42,7 @@ header nav a:hover{
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
-    background-color:#417aac;
+    background-color:var(--clr-background-section);
     border-radius: 30px;
     padding: 10px;
     height: 100%;
@@ -111,7 +52,7 @@ header nav a:hover{
     height: 20vw;
 }
 #container-production{
-    color: wheat;
+    color: var(--clr-text-default);
     padding: 2%;
     width: 100%;
     height: auto;
@@ -139,23 +80,23 @@ header nav a:hover{
 }
 
 .prod-nom{
-    font-size: 1.5em;
+    font-size: var(--fs-l);
 }
 
 .prod-prod{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    font-size: 1em;
+    font-size: var(--fs-m);
 }
 
 /*POURCENTAGE*/
 #container-pourcentage{
     margin: 1%;
     position: relative;
-    background-color: #417aac;
+    background-color: var(--clr-background-section);
     border-radius: 30px;
-    color: wheat;
+    color: var(--clr-text-default);
     padding: 2%;
     width: 20%;
     height: 100%;
@@ -172,12 +113,12 @@ header nav a:hover{
 }
 
 .pourcen-nom{
-    font-size: 1.5em;
+    font-size: var(--fs-l);
 }
 
 .pourcen-pourcen{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    font-size: 1.5em;
+    font-size: var(--fs-l);
 }
