--- a/site/frontend/Energymix/energymix.css
+++ b/site/frontend/Energymix/energymix.css
@@ -2,7 +2,6 @@
 /*CONTENU*/
 .contenu_page{
     position: relative;
-    border-radius: none;
     width: 100%;
     height: 100vh;
     padding: 100px;
@@ -47,9 +46,11 @@
     padding: 10px;
     height: 100%;
 }
-.production img{
-    width: 20vw;
-    height: 20vw;
+canvas {
+    margin: 10px;
+    width: auto !important;
+    height: 100% !important;
+    
 }
 #container-production{
     color: var(--clr-text-default);
@@ -122,3 +123,4 @@
     justify-content: center;
     font-size: var(--fs-l);
 }
+
