--- a/site/frontend/Map/map.css
+++ b/site/frontend/Map/map.css
@@ -12,6 +12,7 @@
     background-color: #6399c7;
 }
 
+/*MAP*/
 #map-container {
     margin: 10px;
     height: 70vh;
@@ -24,6 +25,8 @@
     width: 100%;
     border-radius: 20px;
 }
+
+/*GRAND POPUP ON CLICK */
 .interaction-container{
     margin: 10px;
     width: 20%;
@@ -31,7 +34,8 @@
     padding: 15px 15px 15px 15px;
     display: flex;
     flex-direction: column;
-    background-color: #417aac;
+    /* background-color: #417aac; */
+    background-color: #ffffff;
     border-radius: 20px;
 }
 .interaction-container .card{
@@ -39,7 +43,25 @@
 }
 #infos-centrale {
     overflow: auto;
+    background-color: #ffffff;
+    font-size: var(--fs-m);
+    text-decoration: none;
 }
+#infos-centrale > input{
+    width: 100%;
+    overflow-x: hidden;
+}
+#infos-centrale > span{
+    font-weight: bold;
+}
+
+
+/*PETIT POPUP ON CLICK*/
+.leaflet-popup-content > span{
+    font-weight: bold;
+}
+
+/*ICONS*/
 .styledIcons {
     position: absolute;
     left: 10%;
