--- a/site/frontend/public/css/linky.css
+++ b/site/frontend/public/css/linky.css
@@ -1,107 +1,66 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    scroll-behavior: smooth;
-}
-body{
-    min-height: 100vh;
-    overflow-x: hidden;
-}
-header{
-    z-index: 999;
-    position: absolute;
-    top: 0;
-    left: 0;
+/*CONTENU*/
+
+.contenu_page{
+    position: relative;
     width: 100%;
-    padding: 30px 100px;
+    height: 100vh;
+    padding: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-header .logo{
-    font-size: 2em;
-    text-transform: uppercase;
-    font-weight: 800;
-    text-decoration: none;
-    background: linear-gradient(to right,#f0b190, #f99c2a);
-    -webkit-text-fill-color: transparent;
-}
-header nav{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-header nav a{
-    color: #f99c2a;
-    font-size: 1.1em;
-    font-weight: 500;
-    text-decoration: none;
-    margin-left: 20px;
-    padding: 5px 16px;
-    border-radius: 20px;
-    transition: 0.3s;
-    transition-property: background, color;
-}
-
-header nav a:hover{
-    background: linear-gradient(to bottom, #f0b190, #f99c2a);
-    color: #fff;
-}
-.logo, nav{
-    transform: translateY(-70px);
-    transition: 0.8s;
-}
-/*CONTENU DE LA PAGE*/
-.contenu_page{
-    position: relative;
-    border-radius: none;
-    width: 100%;
-    height: 100vh;
-    padding: 15vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: row;
-    background-color: #6399c7;
+    background-color: var(--clr-background-color);
 }
-
-#map-container {
-    margin: 10px;
-    height: 70vh;
+.contenu_page h1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: var(--fs-xxl);
+    background: linear-gradient(to right,var(--clr-text-secondary), var(--clr-text-primary));
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
     width: 80%;
-    height: 100%;
+    height: auto;
+    max-height: 20vh;
+    margin: 0 0 0 0;
+    font-weight: bold;
 }
-#map {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    border-radius: 20px;
-}
-.interaction-container{
-    margin: 10px;
-    width: 20%;
-    height: 100%;
-    padding: 4% 15px 15px 15px;
+
+.form_half{
+    width: 40%;
+    height: 60vh;
+    margin-right: 100px;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    background-color: #417aac;
-    border-radius: 20px;
+    background-image: url(/img/wall_wallpaper.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-width: 10px;
+    border-color: var(--clr-text-primary);
+    border-style: solid;
 }
-.interaction-container .card{
-    margin-top: 10px;
+.title_half{
+    width: 60%;
+    display: flex;
+    justify-content: baseline;
+    align-items: center;
+    flex-direction: column;
+}
+.lienVersinformation{
+    font-size: var(--fs-m);
+    color: var(--clr-text-content);
+    background-color: #d7d7db;
+    border-radius: 10px;
+    padding: 15px;
+    margin: 20px;
+}
+.lienVersinformation a {
+    text-decoration: none;
+    color: var(--clr-text-content);
 }
 
-form.form-example {
-    display: table;
-}
-
-div.form-example {
-    display: table-row;
-}
-
+/*FORM CSS*/
+/* 
 label, input {
     display: table-cell;
     margin-bottom: 10px;
@@ -109,4 +68,32 @@ label, input {
 
 label {
     padding-right: 10px;
+} */
+
+form{
+    display: flex;
+    flex-direction: column;
+    background-color: #aebe3f;
+    font-size: var(--fs-m);
+    padding: 20px;
+    border-radius: 10px;
+}
+
+input{
+    border: none;
+    height: 40px;
+    width: 200px;
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #d7d7db;
+    outline: none;
+}
+
+input[type=submit]{
+    margin-top: 10px;
+    background-color: #a8a8a8;
+}
+input[type=submit]:hover{
+    transform: scale(1.05);
+    color: #302e2e;
 }
