--- a/site/frontend/public/css/linky.css
+++ b/site/frontend/public/css/linky.css
@@ -27,11 +27,18 @@
 .form_half{
     width: 40%;
     height: 60vh;
-    margin-right: 100px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;    
     flex-direction: column;
+    margin-right: 100px;
+}
+.form_div{
+    width: 90%;
+    height: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;    
     background-image: url(/img/wall_wallpaper.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -39,6 +46,18 @@
     border-color: var(--clr-text-primary);
     border-style: solid;
 }
+.form_half a {
+    height: 10%;
+    font-size: var(--fs-m);
+    font-weight: bold;
+    text-decoration: none;
+    color: var(--clr-text-primary);
+}
+.form_half a:hover {
+    text-decoration: none;
+    color: var(--clr-text-secondary);
+}
+
 .title_half{
     width: 60%;
     display: flex;
@@ -46,18 +65,8 @@
     align-items: center;
     flex-direction: column;
 }
-.lienVersinformation{
-    font-size: var(--fs-m);
-    color: var(--clr-text-content);
-    background-color: #d7d7db;
-    border-radius: 10px;
-    padding: 15px;
-    margin: 20px;
-}
-.lienVersinformation a {
-    text-decoration: none;
-    color: var(--clr-text-content);
-}
+
+
 
 /*FORM CSS*/
 /* 
