fix chart generation of energymix

--- a/site/frontend/public/css/energymix.css
+++ b/site/frontend/public/css/energymix.css
@@ -4,8 +4,9 @@
     --clr-Gaz: #ff6384;
     --clr-Fioul: #4bc0c0;
     --clr-Hydraulique: #36a2eb;
-    --clr-Eolien: #cecece;
+    --clr-Éolien: #cecece;
     --clr-Solaire: #ffcd56;
+    --clr-Bioénergies: #71ca6d;
 
 }
 /*CONTENU*/
