--- a/site/frontend/public/css/style.css
+++ b/site/frontend/public/css/style.css
@@ -27,7 +27,7 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
     scroll-behavior: smooth;
-    user-select: none;
+    /* user-select: none; */
 }
 body{
     min-height: 100vh;
