--- a/site/frontend/public/css/energymix.css
+++ b/site/frontend/public/css/energymix.css
@@ -6,7 +6,7 @@
     --clr-Hydraulique: #36a2eb;
     --clr-Éolien: #cecece;
     --clr-Solaire: #ffcd56;
-    --clr-Bioénergies: #71ca6d;
+    --clr-Autres: #71ca6d;
 
 }
 /*CONTENU*/
