--- a/site/frontend/public/css/about.css
+++ b/site/frontend/public/css/about.css
@@ -10,6 +10,9 @@
     background-color: var(--clr-background-color);
 }
 .presentation{
+    margin-top: 10vh;
+    height: 80vh;
+    width: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,9 +20,42 @@
     padding: 40px;
     border-radius: 10px;
     background-color: var(--clr-background-section);
+    border-color: var(--clr-text-primary);
+    border-style: solid;
+    border-width: 10px;
+}
+.presentation > h2{
+    font-weight: bold;
+    margin: 10px;
+    padding: 10px;
 }
 .dev{
     color: var(--clr-text-primary);
     font-size: var(--fs-l);
     font-weight: bold;
+}
+.links{
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.links > a{
+    margin: 0px 50px 0px 50px;
+    text-decoration: none;
+    font-size: var(--fs-l);
+    color: var(--clr-text-primary);
+}
+.links > a:hover{
+    text-decoration: none;
+    color: var(--clr-text-secondary);
+}
+.rendu{
+    text-decoration: none;
+    color: var(--clr-text-primary);
+    font-size: var(--fs-l);
+    font-weight: bold;
+}
+.rendu:hover{
+    transform: scale(1.5);
+    color: var(--clr-text-secondary);
 }
